--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ firebaseMlModeldownloaderKtx = "25.0.0"
 picasso = "2.8"
 recyclerview = "1.3.2"
 runtimeLivedata = "1.6.7"
+benchmarkMacro = "1.2.4"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
@@ -48,6 +49,7 @@ firebase-ml-modeldownloader-ktx = { group = "com.google.firebase", name = "fireb
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro", version.ref = "benchmarkMacro" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
